# invitations

./: .gitignore  Cargo.toml  DEV-README.md  README.md  package-lock.json  package.json
.github/workflows/: main.yml
crates/coordinator/: Cargo.toml
crates/coordinator/src/: invite.rs  lib.rs  signals.rs
crates/integrity/: Cargo.toml
crates/integrity/src/: agent_to_invite.rs  agent_to_invites.rs  invite.rs  invite_to_agent.rs  invite_to_members.rs  lib.rs
crates/rzomes/: Cargo.toml
crates/rzomes/src/: invite.rs  lib.rs  signals.rs
crates/zomes/: Cargo.toml
crates/zomes/src/: agent_to_invites.rs  invite_to_members.rs
tests/: package.json
tests/src/invitations/: common.ts  invite.test.ts  validation.test.ts
workdir/: web-happ.yaml
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
