
[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver ="2"
members = ["crates/integrity", "crates/coordinator"]

[workspace.dependencies]
hdi = "=0.2"
hdk = "=0.1"
serde = "1"

[workspace.dependencies.hc_coordinator_zome_invitations]
path = "crates/coordinator"

[workspace.dependencies.hc_integrity_zome_invitations]
path = "crates/integrity"
