[package]
authors = ["nphias@gmail.com","manuel.r.puentes.d@gmail.com"]
name = "hc_coordinator_zome_invitations"
version = "0.1.6"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_coordinator_zome_invitations"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
hc_integrity_zome_invitations = { workspace = true }
