[package]
authors = ["nphias@gmail.com","manuel.r.puentes.d@gmail.com","guillem.cordoba@gmail.com"]
name = "hc_integrity_zome_invitations"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_integrity_zome_invitations"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
