[package]
authors = ["nphias@gmail.com","manuel.r.puentes.d@gmail.com"]
name = "hc_rzome_invitations"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_rzome_invitations"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
hc_zome_invitations = { path = "../zomes"} 
