[package]
authors = ["nphias@gmail.com","manuel.r.puentes.d@gmail.com"]
name = "hc_zome_invitations"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_invitations"

[dependencies]
hdi = { workspace = true }
#holochain = { worskpace = true }
serde = { workspace = true }
